# swiftllm

./: Cargo.toml  LICENSE  README.md  install.sh  pyproject.toml
crates/swiftllm-core/: Cargo.toml
crates/swiftllm-core/src/: config.rs  engine.rs  error.rs  lib.rs  tensor.rs  types.rs
crates/swiftllm-core/src/execution/: mod.rs  speculative.rs  tensor_parallel.rs
crates/swiftllm-core/src/memory/: block_manager.rs  kv_cache.rs  mod.rs  paged_attention.rs
crates/swiftllm-core/src/sampling/: mod.rs  strategies.rs
crates/swiftllm-core/src/scheduler/: continuous_batching.rs  mod.rs  request_queue.rs
crates/swiftllm-cuda/: Cargo.toml  build.rs
crates/swiftllm-cuda/kernels/: paged_attention.cu
crates/swiftllm-cuda/src/: bindings.rs  lib.rs
crates/swiftllm-models/: Cargo.toml
crates/swiftllm-models/src/: lib.rs
crates/swiftllm-models/src/architectures/: llama.rs  mistral.rs  mod.rs  phi.rs  qwen.rs
crates/swiftllm-models/src/layers/: attention.rs  embedding.rs  mlp.rs  mod.rs  normalization.rs
crates/swiftllm-models/src/loaders/: gguf.rs  huggingface.rs  mod.rs  safetensors.rs
crates/swiftllm-server/: Cargo.toml
crates/swiftllm-server/src/: lib.rs  main.rs  streaming.rs
crates/swiftllm-server/src/api/: mod.rs  openai.rs
examples/: basic_inference.py  batch_processing.py  multi_gpu.py  openai_server.py  streaming.py
python/swiftllm/: __init__.py  _core.pyi  cli.py  config.py  engine.py  model_resolver.py  sampling.py
src/: lib.rs
