[package]
name = "swiftllm-cuda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CUDA kernels for SwiftLLM"
build = "build.rs"

[dependencies]
# CUDA bindings
cudarc = { workspace = true }

# Numeric types
half = { workspace = true }
bytemuck = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[features]
default = []
cuda-12 = []
cuda-11 = []
