[package]
name = "swiftllm-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Model implementations for SwiftLLM"

[dependencies]
# Internal crates
swiftllm-core = { path = "../swiftllm-core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tensor operations
half = { workspace = true }
num-traits = { workspace = true }
bytemuck = { workspace = true }

# Model formats
safetensors = { workspace = true }
tokenizers = { workspace = true }
memmap2 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
regex = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
