[package]
name = "swiftllm-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP server for SwiftLLM with OpenAI-compatible API"

[[bin]]
name = "swiftllm"
path = "src/main.rs"

[dependencies]
# Internal crates
swiftllm-core = { path = "../swiftllm-core" }
swiftllm-models = { path = "../swiftllm-models" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
